--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 .box_logo_mobile {
     height: 75px;
 }
@@ -14,6 +15,7 @@ aside {
 
 .cont_general {
     width: calc(100% - 55px);
+    overflow-y: scroll;
 }
 
 .top_main {
@@ -23,6 +25,11 @@ aside {
 .info_student {
     height: 100%;
 }
+
+.card {
+    width: 100%;
+}
+
 
 /* utilities */
 
