--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 .box_logo_mobile {
     height: 75px;
 }
@@ -19,8 +21,8 @@ aside {
     overflow-y: scroll;
 }
 
-.top_main {
-    height: 260px;
+.col-12 {
+    min-height: 100px;
 }
 
 .info_student {
